# cram_physics

./: README.md
cram_environment_representation/: cram-environment-representation.asd
cram_environment_representation/src/: event-handlers.lisp  occasions.lisp
cram_physics/: package.xml  package.xml~
cram_pr2_knowledge/: cram-pr2-knowledge.asd
cram_pr2_knowledge/src/: package.lisp  pr2-knowledge.lisp
spatial_relations_costmap/: CMakeLists.txt  package.xml  spatial-relations-costmap.asd
spatial_relations_costmap/src/: package.lisp
